--- a/index.html
+++ b/index.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Festejando a Conexão Campo-Cidade</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Festejando Campo e Cidade</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Festejando a Conexão Campo-Cidade</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="produtores.html">Produtores</a></li>
-                <li><a href="receitas.html">Receitas</a></li>
-                <li><a href="historias.html">Histórias</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <section id="destaque">
-            <h2>Destaque da Semana</h2>
-            </section>
+  <header>
+    <h1>🌾🏙️ Festejando a Conexão entre Campo e Cidade</h1>
+    <p>Celebrando a harmonia entre o rural e o urbano</p>
+  </header>
 
-        <section id="conexao">
-            <h2>A Importância da Conexão</h2>
-            <p>Um texto explicando a relevância da união entre o campo e a cidade...</p>
-        </section>
+  <main class="container">
+    <section class="section campo">
+      <h2>🌿 Vida no Campo</h2>
+      <p>Tradições, natureza e sustentabilidade. O campo oferece alimento, cultura e tranquilidade, conectando-nos com as raízes da terra.</p>
+      <p>Feiras, produtos orgânicos e turismo rural aproximam campo e cidade cada vez mais.</p>
+    </section>
 
-        </main>
+    <section class="section cidade">
+      <h2>🏙️ Vida na Cidade</h2>
+      <p>Inovação, diversidade e desenvolvimento. A cidade impulsiona o progresso com tecnologia e oportunidades.</p>
+      <p>Espaços urbanos abrem portas para produtos do campo e experiências culturais integradas.</p>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 Projeto Agrinho - Conexão Campo-Cidade</p>
-    </footer>
+  <footer>
+    © 2025 - Conexão Campo & Cidade | Todos os direitos reservados
+  </footer>
 
-    <script src="js/script.js"></script>
 </body>
 </html>
