--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 
   <main class="container">
     <section class="section campo">
+      <img src="https://images.unsplash.com/photo-1529021841803-1fbdc225b69d" alt="Vida no Campo" class="imagem">
       <h2>🌿 Vida no Campo</h2>
       <p>Tradições, natureza e sustentabilidade. O campo oferece alimento, cultura e tranquilidade, conectando-nos com as raízes da terra.</p>
       <p>Feiras, produtos orgânicos e turismo rural aproximam campo e cidade cada vez mais.</p>
     </section>
 
     <section class="section cidade">
+      <img src="https://images.unsplash.com/photo-1587202372775-b4e9a4eb4e2d" alt="Vida na Cidade" class="imagem">
       <h2>🏙️ Vida na Cidade</h2>
       <p>Inovação, diversidade e desenvolvimento. A cidade impulsiona o progresso com tecnologia e oportunidades.</p>
       <p>Espaços urbanos abrem portas para produtos do campo e experiências culturais integradas.</p>
