--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main class="container">
     <section class="section campo">
-      <img src="https://images.unsplash.com/photo-1529021841803-1fbdc225b69d" alt="Vida no Campo" class="imagem">
+     <img src="agricultura-organica-560x560.png" alt="">
       <h2>🌿 Vida no Campo</h2>
       <p>Tradições, natureza e sustentabilidade. O campo oferece alimento, cultura e tranquilidade, conectando-nos com as raízes da terra.</p>
       <p>Feiras, produtos orgânicos e turismo rural aproximam campo e cidade cada vez mais.</p>
