--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main class="container">
     <section class="section campo">
-     <img src="agricultura-organica-560x560.png" alt="">
+     <img src="agricultura-organica-560x560.png" alt="Vida no campo">
       <h2>🌿 Vida no Campo</h2>
       <p>Tradições, natureza e sustentabilidade. O campo oferece alimento, cultura e tranquilidade, conectando-nos com as raízes da terra.</p>
       <p>Feiras, produtos orgânicos e turismo rural aproximam campo e cidade cada vez mais.</p>
