--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <section class="section cidade">
-      <img src="https://images.unsplash.com/photo-1587202372775-b4e9a4eb4e2d" alt="Vida na Cidade" class="imagem">
+      <img src="Blog-2.jpg" alt="Vida na Cidade" class="imagem">
       <h2>🏙️ Vida na Cidade</h2>
       <p>Inovação, diversidade e desenvolvimento. A cidade impulsiona o progresso com tecnologia e oportunidades.</p>
       <p>Espaços urbanos abrem portas para produtos do campo e experiências culturais integradas.</p>
