--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <p>Feiras, produtos orgânicos e turismo rural aproximam campo e cidade cada vez mais.</p>
     </section>
 
+    <div class="curva">
+    <svg viewBox="0 0 1440 150" preserveAspectRatio="none">
+      <path d="M0,64 C480,160 960,0 1440,96 L1440,160 L0,160 Z" fill="#dbe7ff"></path>
+    </svg>
+  </div>
+
     <section class="section cidade">
       <img src="Blog-2.jpg" alt="Vida na Cidade" class="imagem">
       <h2>🏙️ Vida na Cidade</h2>
